[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/AtlasPlayer/atlas_player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player.gd" type="Script" id=2]
[ext_resource path="res://scenes/dev_tools/FileInspector.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="AtlasTexture" id=2]

[node name="Player" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Interface" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="ColorBG" type="ColorRect" parent="Interface"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 1, 1, 1, 0 )

[node name="TextureBG" type="TextureRect" parent="Interface"]
margin_right = 1024.0
margin_bottom = 600.0
expand = true
stretch_mode = 6

[node name="AtlasPlayer" type="TextureRect" parent="Interface"]
margin_right = 1024.0
margin_bottom = 600.0
texture = SubResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 1 )

[node name="FileInspector" parent="." instance=ExtResource( 3 )]
visible = false
